[package]
name = "dusk-forge"
authors = ["Hein Dauven"]
version = "0.1.0"
edition = "2021"
description = "A smart contract development framework for Dusk"
license = "MPL-2.0"

[dependencies]
syn = { version = "2.0.96", features = ["full"] }
quote = "1.0.38"
dusk-core = { version = "0.1.0", git = "https://github.com/dusk-network/rusk/", branch = "master" }

[lib]
proc-macro = true
